@@ -1,0 +1,27 @@
+--  Copyright 2007, 2008 Free Software Foundation, Inc.
+--
+--  This program is free software; you can redistribute it and/or modify
+--  it under the terms of the GNU General Public License as published by
+--  the Free Software Foundation; either version 3 of the License, or
+--  (at your option) any later version.
+--
+--  This program is distributed in the hope that it will be useful,
+--  but WITHOUT ANY WARRANTY; without even the implied warranty of
+--  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+--  GNU General Public License for more details.
+--
+--  You should have received a copy of the GNU General Public License
+--  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+package Defs is
+
+   type Struct1 is limited record
+      X : Integer := 13;
+      Y : Integer := 19;
+   end record;
+
+   function F1 (S : Struct1) return Integer;
+
+   S1 : Struct1;
+
+end Defs;
