@@ -1,3 +1,11 @@
+2008-01-30  Paul Hilfinger  <hilfinger@adacore.com>
+
+	* gdb.ada/formatted_ref: New test program.
+	* gdb.ada/formatted_ref.exp: New testcase.
+
+	* gdb.cp/formatted-ref.cc: New file.
+	* gdb.cp/formatted-ref.exp: New testcase.
+
 2008-01-30  Joel Brobecker  <brobecker@adacore.com>
 
 	* gdb.base/ptype.exp: Add testing of "ptype $pc".
